[gd_scene load_steps=2 format=2]

[ext_resource path="res://ListCreator.gd" type="Script" id=1]

[node name="ListCreator" type="PopupPanel"]
margin_right = 8.0
margin_bottom = 8.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -115.0
margin_top = -52.0
margin_right = -4.0
margin_bottom = -4.0

[node name="AlreadyExists" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "File Already Exists"
align = 1

[node name="Entry" type="LineEdit" parent="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
text = "Enter Name"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 111.0
margin_bottom = 38.0

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 53.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Create"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 111.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Cancel"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
